home/containers/kubernetes/taskset_kubernetes_containers/task_043_gcp_k8s__codecentric_keycloak__bitnami_postgres___using_41_42/base/keycloakx/ingress_keycloak.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    # kubernetes.io/ingress.class: "nginx" # Warning: annotation "kubernetes.io/ingress.class" is deprecated, please use 'spec.ingressClassName' instead
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - keycloak.DOMAIN_NAME # replace with your domain
    secretName: keycloak-tls # This is the secret that will hold the SSL certificate
  rules:
  - host: keycloak.DOMAIN_NAME # replace with your domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak-keycloakx-http
            port:
              number: 80
